--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -10,9 +10,11 @@
 
       {{> loginButtons}}
 
-      <form class="new-task">
-        <input type="text" name="text" placeholder="Type to create new task" />
-      </form>
+      {{#if currentUser}}
+        <form class="new-task">
+          <input type="text" name="text" placeholder="Type to create new task" />
+        </form>
+      {{/if}}
     </header>
 
 
